--- a/src/Pysyft_remote.ipynb
+++ b/src/Pysyft_remote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "770a6a29-51ac-468b-9211-c61737d2e540",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ The installed version of syft==0.8.1b9 matches the requirement >=0.8 and the requirement <0.8.1\n"
+      "✅ The installed version of syft==0.8.0.post2 matches the requirement >=0.8 and the requirement <0.8.1\n"
      ]
     }
    ],
