commiting results from 3 privacy choices

--- a/src/Pysyft_remote.ipynb
+++ b/src/Pysyft_remote.ipynb
@@ -7,10 +7,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "kj/filesystem-disk-unix.c++:1703: warning: PWD environment variable doesn't match current directory; pwd = /home/hossam\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "Warning: syft is imported in light mode by default.         \n",
+       "To switch to dark mode, please run `sy.options.color_theme = 'dark'`"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ The installed version of syft==0.8.0.post2 matches the requirement >=0.8 and the requirement <0.8.1\n"
+      "✅ The installed version of syft==0.8.1b10 matches the requirement >=0.8 and the requirement <0.8.1\n"
      ]
     }
    ],
@@ -22,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ff6c3c8e",
    "metadata": {},
    "outputs": [],
@@ -33,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "b815391a-de5f-4b10-8113-7b445d78c2f0",
    "metadata": {},
    "outputs": [
@@ -41,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting test-domain_api server on 0.0.0.0:8421\n",
+      "Starting test-domain_api server on 0.0.0.0:3142\n",
       "\n",
       "WARNING: private key is based on node name: test-domain_api in dev_mode. Don't run this in production.\n",
       "SQLite Store Path:\n",
@@ -54,21 +75,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [4279]\n",
+      "INFO:     Started server process [505]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://0.0.0.0:8421 (Press CTRL+C to quit)\n"
+      "INFO:     Uvicorn running on http://0.0.0.0:3142 (Press CTRL+C to quit)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:54950 - \"GET /api/v2/metadata HTTP/1.1\" 200 OK\n",
-      ". Done.\n",
-      "INFO:     127.0.0.1:54954 - \"GET /api/v2/metadata HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:54954 - \"POST /api/v2/login HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:54954 - \"GET /api/v2/api?verify_key=855efeabbf524904b1902aeb0bb7bcf64bb441dccc0e51cbdacc65d2d639769c HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:35818 - \"GET /api/v2/metadata HTTP/1.1\" 200 OK\n",
+      ". Done.\n"
      ]
     }
    ],
